# padMule

./: .gitignore  CLAUDE.md  Cargo.toml  NOTICE  README.md
.claude/: settings.json
.claude/hooks/: kb-reflect-check.sh
.github/workflows/: ios-build.yml  ios-test.yml
amule-3.0.1/: .git_archival.txt
amule-3.0.1/docs/: CHANGELOG.md
amule-3.0.1/src/: SharedDirWatcher.h
build-oracle/: CMakeCache.txt
crates/mule-cli/: Cargo.toml
crates/mule-cli/src/: main.rs
crates/mule-engine/: Cargo.toml
crates/mule-engine/src/: bootstrap.rs  catalog.rs  connection.rs  credits.rs  crypt_policy.rs  engine.rs  fetch.rs  framed.rs  identity.rs  kad_live.rs  lib.rs  link.rs  multi_source.rs  obf_handshake.rs  part_file.rs  part_store.rs  peer.rs  peer_conn.rs  portmap.rs  search.rs  secure_ident.rs  server_messages.rs  share.rs  sources.rs  stats.rs  transfer.rs  transfer_session.rs  upload_queue.rs  upnp.rs
crates/mule-engine/tests/: fetch_loopback.rs  secure_ident_interop.rs
crates/mule-ffi/: Cargo.toml
crates/mule-ffi/examples/: simulate.rs
crates/mule-ffi/src/: lib.rs
crates/mule-files/: Cargo.toml
crates/mule-files/src/: clients_met.rs  ipfilter.rs  known_met.rs  lib.rs  nodes_dat.rs  part_met.rs  pins.rs  preferences.rs  server_met.rs
crates/mule-files/tests/: nodes_dat_interop.rs
crates/mule-kad/: Cargo.toml
crates/mule-kad/src/: frame.rs  hardening.rs  lib.rs  lookup.rs  message.rs  routing.rs  udp_obf.rs
crates/mule-kad/tests/: kad_pipeline.rs
crates/mule-proto/: Cargo.toml
crates/mule-proto/src/: aich.rs  hash.rs  io.rs  kad_id.rs  lib.rs  link.rs  obf.rs  packet.rs  rc4.rs  tag.rs
docs/raw/: README.md  amule-upstream-reference-2026-07-12.md  ipados-constraints-research-2026-07-12.md  protocol-understanding-2026-07-12.md  wave4d-upstream-research-2026-07-14.md  wave5-crypto-research-2026-07-14.md  wave6-kad-research-2026-07-14.md
docs/superpowers/plans/: 2026-07-12-wave1-mule-proto-ed2k-hash.md  (+9 more)
docs/wiki/: arch-upstream-amule.md  build-progress.md  decisions-and-lessons.md  ed2k-protocol-archaeology.md  ed2k-server-oracle.md  emule-070b-features.md  emule-peer-oracle.md  feature-server-hunter.md  index.md  ipados-constraints.md  lifecycle-and-reactivation.md  log.md  mac-toolchain-setup.md  nat-traversal-design.md  net-highid-and-port-forwarding.md  on-device-test-checklist.md  padmule-enhancement-channel.md  protocol-reference.md  protocol-understanding.md  ref-ecosystem.md  ref-source-trees.md  security-model.md
ios/: .gitignore  project.yml
ios/padMuleTests/: OutcomeTests.swift  PresentationTests.swift
scripts/: aich-golden.sh  build-amuled-oracle.sh  differential-test.sh  emule-oracle.sh  eserver-oracle.sh  simulate.sh
(+19 files in other folders)
