[workspace]
resolver = "2"
members = [
    "crates/mule-proto",
    "crates/mule-files",
    "crates/mule-engine",
    "crates/mule-cli",
]

[workspace.package]
edition = "2021"
license = "GPL-2.0-or-later"
rust-version = "1.96"

[workspace.dependencies]
md4 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
rsa = { version = "0.9", features = ["sha1"] }
base64 = "0.22"
rand = "0.8"
hex = "0.4"
flate2 = "1"
tokio = "1"
