[package]
name = "mule-engine"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mule-proto = { path = "../mule-proto" }
tokio = { workspace = true, features = ["net", "io-util", "sync", "rt", "time"] }

[dev-dependencies]
hex = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
