[package]
name = "mule-engine"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
flate2 = { workspace = true }
mule-files = { path = "../mule-files" }
mule-kad = { path = "../mule-kad" }
mule-proto = { path = "../mule-proto" }
rsa = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "sync", "rt", "time"] }

[dev-dependencies]
hex = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
