[package]
name = "mule-ffi"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# lib for the workspace/tests; cdylib + staticlib for the iOS UniFFI binding.
[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
mule-engine = { path = "../mule-engine" }
mule-proto = { path = "../mule-proto" }
uniffi = { workspace = true, features = ["cli"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync"] }
hex = { workspace = true }

# `uniffi-bindgen generate --library` reads the compiled cdylib to emit Swift.
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
